--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.19.2",
+    "@emoji-mart/react": "^1.1.1",
     "@prisma/client": "^6.7.0",
     "@radix-ui/react-alert-dialog": "^1.1.13",
     "@radix-ui/react-avatar": "^1.1.9",
@@ -24,8 +25,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "lucide-react": "^0.509.0",
-    "next": "^14.2.25",
+    "emoji-mart": "^5.6.0",
+    "lucide-react": "^0.513.0",
+    "next": "^15.3.3",
     "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
